--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="row w-100 m-0">
                     <div class="col-2"></div>
                     <div class="col-3"><strong>Current Player:</strong></div>
-                    <div class="col-2 borderplayer" id="playerO">Player O</div>
+                    <div class="col-2" id="playerO">Player O</div>
                     <div class="col-2" id="playerX">Player X</div>
                     <div class="col-3"></div>
                     <div class="col-2"></div>
